<resources>
    <string name="app_name">백주부 요리 레시피</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="notice">Notice</string>
    <string name="my_list">My list</string>
    <string name="policy">Policy</string>
    <string name="app_info">App info</string>
    <string name="inquiries">Inquiries</string>
    <string name="login">Login</string>
</resources>
