<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/community" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/notice" />
        <item
            android:id="@+id/nav_my_list"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/my_list" />
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/policy"/>
        <item
            android:id="@+id/nav_app_info"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/app_info"/>
        <item
            android:id="@+id/nav_inquiries"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/inquiries"/>

    </group>

    <!--<item android:title="Communicate"-->
        <!--&gt;-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
